# houtamelo_utils

./: .gitignore  Cargo.toml
src/: all_matches.rs  any_matches_macro.rs  clamp01.rs  clone_random.rs  count_or_more.rs  delegate_impls_macro.rs  dynamic_array.rs  fn_name.rs  get_random.rs  hash_set_extract_keys.rs  indexed_hash_map.rs  indexed_set.rs  lib.rs  no_matches_macro.rs  none.rs  none_or.rs  remove_many.rs  str_macro.rs  take_first.rs  take_random.rs  touch.rs  type_table_macro.rs  variant_table_macro.rs  weighted_rand.rs
src/bounded_floats/: f32.rs  f64.rs  mod.rs
src/bounded_ints/: bound_i16.rs  bound_i8.rs  bound_u16.rs  bound_u8.rs  mod.rs
src/bounded_ints/macros/: add.rs  div.rs  eq.rs  from.rs  main.rs  mod.rs  mul.rs  ord.rs  rem.rs  saturate_into.rs  sub.rs
src/closure_converters/: fn_.rs  fn_mut.rs  fn_once.rs  mod.rs
src/collection_trait/: array_impl.rs  hash_map_impl.rs  hash_set_impl.rs  mod.rs  slice_impl.rs  vec_impl.rs
src/collections/: count_or_more.rs  dynamic_array.rs  indexed_map.rs  mod.rs  small_map.rs  small_set.rs
src/iter_generator/: array_impl.rs  hash_map_impl.rs  hash_set_impl.rs  slice_impl.rs  vec_impl.rs
src/random_utils/: get_random.rs  mod.rs  weighted_random.rs
