[package]
name = "houtamelo_utils"
version = "2.0.1"
authors = ["Houtamelo"]
edition = "2021"
description = "A collection of utilities shared between Houtamelo's projects."
license = "MIT"
repository = "https://github.com/Houtamelo/houtamelo_utils"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
float-cmp = { version = "0.9.0", features = ["std"] }
serde = { version = "1.0.201", features = ["derive"] }
ron = "0.8.1"
num-traits = "0.2.19"
serde_json = "1.0.117"
bimap = { version = "0.6.3", features = ["serde", "std"] }
rand = "0.8.5"
pluck = "0.1.1"
anyhow = "1.0.83"
inline_format = "0.2.3"
