[package]
name = "houtamelo_utils"
version = "3.1.0"
authors = ["Houtamelo"]
edition = "2021"
description = "A collection of utilities shared between Houtamelo's projects."
license = "MIT"
repository = "https://github.com/Houtamelo/houtamelo_utils"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
float-cmp = { version = "0.9", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
bimap = { version = "0.6", features = ["std"] }
rand = { version = "0.8", optional = true }
pluck = "0.1"
anyhow = "1.0"
smallvec = { version = "1.15.1", features = ["const_generics"] }

[features]
default = []
serde = ["dep:serde", "bimap/serde", "smallvec/serde"]
rand = ["dep:rand"]

[dev-dependencies]
ron = "0.8.1"